--- a/index.html
+++ b/index.html
@@ -410,7 +410,9 @@
                             <b> Produktion & Schauraum</b><br />
                             Hauptstraße 24a<br />
                             3372 Blindenmarkt
-
+                            <b> Produktion & Schauraum</b><br />
+                            Hauptstraße 24a<br />
+                            3372 Blindenmarkt
                         </div>
                     </a>
                 </div>
