--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                         <div>
                             <b> Produktion & Schauraum</b><br />
                             Hauptstraße 24a<br />
-                            3372 Blindenmarkt
+                            3372 Blindenmarkt<br />
                             <b> Produktion & Schauraum</b><br />
                             Hauptstraße 24a<br />
                             3372 Blindenmarkt
