--- a/index.html
+++ b/index.html
@@ -411,9 +411,9 @@
                             Hauptstraße 24a<br />
                             3372 Blindenmarkt<br /><br />
                             <br />
-                            <b> Produktion & Schauraum</b><br />
-                            Hauptstraße 24a<br />
-                            3372 Blindenmarkt
+                            <b> Büro</b><br />
+                            Weinschenk 7<br />
+                            4391 Waldhausen
                         </div>
                     </a>
                 </div>
