--- a/index.html
+++ b/index.html
@@ -420,7 +420,8 @@
                 <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
                     <a class="d-block text-muted" href="tel:+43 699 123 123 45">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+43 699 123 123 45</div>
+                        <div>+43 699 123 123 45</div><br />
+                        <div>+43 699 123 123 45</div><br />
                     </a>
                 </div>
                 <div class="col-lg-3 mr-auto text-center mb-5 mb-lg-0">
