--- a/index.html
+++ b/index.html
@@ -418,9 +418,9 @@
                     </a>
                 </div>
                 <div class="col-lg-3 ml-auto text-center mb-5 mb-lg-0">
-                    <a class="d-block text-muted" href="tel:+43 699 123 123 45">
+                    <a class="d-block text-muted" href="tel:+43 660 40 471 51">
                         <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+43 660 40 471 51</div><br />
+                        <div>+43 660 40 471 51</div>
                         <div>+43 680 14 138 88</div>
                     </a>
                 </div>
