--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <h3 class="text-center mt-0 mb-5">Unsere Partner</h3>
                 <div class="row">
                     <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_dan.jpg" alt="..." />
                     </div>
                     <div class="col-md-3">
                         <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
