--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_dan.jpg" alt="..." />
                     </div>
                     <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_miele.jpg" alt="..." />
                     </div>
                     <div class="col-md-3">
                         <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
