--- a/index.html
+++ b/index.html
@@ -272,13 +272,13 @@
                 <h3 class="text-center mt-0 mb-5">Unsere Partner</h3>
                 <div class="row">
                     <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_wtg.jpg" alt="..." />
                     </div>
                     <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_kunex.jpg" alt="..." />
                     </div>
                     <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_dana.jpg" alt="..." />
                     </div>
                     <div class="col-md-3">
                         <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
