--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                         <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_miele.jpg" alt="..." />
                     </div>
                     <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_anrei.jpg" alt="..." />
                     </div>
                     <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_schoesswender.jpg" alt="..." />
                     </div> 
                 </div>
             </div>
@@ -281,7 +281,7 @@
                         <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_dana.jpg" alt="..." />
                     </div>
                     <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/kriga_logo.png" alt="..." />
+                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_haidl.jpg" alt="..." />
                     </div> 
                 </div>
             </div>
