--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
                         <img src="assets/img/team/person2.jpg" alt="Eva Gamperl">
-                        <h3 class="h4 mb-2 mt-2">Eva Gamperlr</h3>
+                        <h3 class="h4 mb-2 mt-2">Eva Gamperl</h3>
                         <p class="text-white-50 mb-2">Buchhaltung</p>
                     </div>
                 </div>
