--- a/index.html
+++ b/index.html
@@ -53,20 +53,20 @@
     </nav>
     <!-- Masthead-->
     <header class="masthead">
-            <div class="container h-100">
-             <div class="row h-100 align-items-center justify-content-center text-center">
-                 <div class="col-lg-10 align-self-end">
-                     <img class="col-md-4 col-lg-8" src="assets/img/kriga_logo.png" alt="Logo">
-                  </div>
-                  <div class="col-lg-8 align-self-baseline">
-                      <p class="text-white-75 font-weight-light mb-15">Mühlviertel trifft Mostviertel
-                      <p class="text-white-75 font-weight-light mb-15">Präzision - Innovation - Handwerk
-                     </p>
-                      <hr class="divider my-4" />
-                       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
-                  </div>
-             </div>
-         </div>
+        <div class="container h-100">
+            <div class="row h-100 align-items-center justify-content-center text-center">
+                <div class="col-lg-10 align-self-end">
+                    <img class="col-md-4 col-lg-8" src="assets/img/kriga_logo.png" alt="Logo">
+                </div>
+                <div class="col-lg-8 align-self-baseline">
+                    <p class="text-white-75 font-weight-light mb-15">Mühlviertel trifft Mostviertel
+                    <p class="text-white-75 font-weight-light mb-15">Präzision - Innovation - Handwerk
+                    </p>
+                    <hr class="divider my-4" />
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Lernen Sie uns kennen!</a>
+                </div>
+            </div>
+        </div>
     </header>
     <!-- About-->
     <section class="page-section bg-primary" id="about">
@@ -75,7 +75,8 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Ihr Wohntraum ist uns wichtig!</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-75 mb-4">Mit langjähriger Erfahrung, einem hohen Maß an Kreativität und viel Fingerspitzengefühl verbinden unsere Einrichtungsberater modernste Technik
+                    <p class="text-white-75 mb-4">Mit langjähriger Erfahrung, einem hohen Maß an Kreativität und viel
+                        Fingerspitzengefühl verbinden unsere Einrichtungsberater modernste Technik
                         und hochwertige Materialien mit durchdachten Designkonzepten. Überzeugen Sie sich selbst!</p>
                     <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Legen wir los!</a>
                 </div>
@@ -92,21 +93,24 @@
                     <div class="mt-5">
                         <i class="fas fa-4x fa-people-arrows text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Beratung</h3>
-                        <p class="text-muted mb-0">Sie haben einen persönlichen Ansprechpartner für das gesamte Projekt.</p>
+                        <p class="text-muted mb-0">Sie haben einen persönlichen Ansprechpartner für das gesamte Projekt.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-ruler text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Planung</h3>
-                        <p class="text-muted mb-0">Wir nehmen uns ausführlich Zeit für Sie. Die Planung wird bei uns im Haus gemacht.</p>
+                        <p class="text-muted mb-0">Wir nehmen uns ausführlich Zeit für Sie. Die Planung wird bei uns im
+                            Haus gemacht.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-tree text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Produktion</h3>
-                        <p class="text-muted mb-0">Wir Produzieren mit modernsten Maschinen alles individuel nach Ihren Wünschen.</p>
+                        <p class="text-muted mb-0">Wir Produzieren mit modernsten Maschinen alles individuel nach Ihren
+                            Wünschen.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -124,7 +128,7 @@
         <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box js-scroll-trigger" href="#kitchen">
+                    <a class="portfolio-box js-scroll-trigger" href="#">
                         <img class="img-fluid" src="assets/img/portfolio/fullsize/Küche.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-name">Küchen</div>
@@ -132,7 +136,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box js-scroll-trigger" href="#livingroom">
+                    <a class="portfolio-box js-scroll-trigger" href="#">
                         <img class="img-fluid" src="assets/img/portfolio/fullsize/Individuelle_Möbel.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-name">Individuelle Möbel</div>
@@ -140,7 +144,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box js-scroll-trigger" href="#stairs">
+                    <a class="portfolio-box js-scroll-trigger" href="#">
                         <img class="img-fluid" src="assets/img/portfolio/fullsize/Stiege.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-name">Türen - Böden- Stiegen</div>
@@ -150,147 +154,10 @@
             </div>
         </div>
     </div>
-    <section class="page-section bg-info text-white" id="kitchen">
-        <div class="container">
-            <h2 class="text-center mt-0">Küchen</h2>
-            <hr class="divider light my-4 mb-5">
-            <div class="row pb-5 pt-5">
-                <div class="col-lg-5 col-md-12 text-center pb-5">
-                    Das Tätigkeitsfeld erstreckt sich über nahezu alle Bereiche des Tischlerhandwerks, sei es die individuelle Gestaltung von Esszimmern, 
-                    Schlafzimmern oder Wohnzimmern, der Fertigung von Türen und Stiegen oder der Planung von Küchen. 
-                    Die Materialvielfalt reicht dabei von traditioneller Massivholzverarbeitung über Furniertechnik bis zu modernsten 
-                    Platten und Oberflächengestaltungen mit Glaselementen und LED Beleuchtung. Selbstverständlich gibt es auch die 
-                    Zusammenarbeit mit namhaften österreichischen Produzenten, deren Türen, Böden, Küchen, Esszimmer, Jugendzimmer...
-                    von uns fachgerecht montiert werden.                    
-                </div>
-                <div class="container-fluid p-0 col-lg-5 col-md-12 offset-lg-2">
-                    <div class="row">
-                        <div class="col-lg-6  col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                        <div class="col-lg-6 col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                        <div class="col-lg-6  col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                        <div class="col-lg-6 col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container justify-content-center">
-                <h3 class="text-center mt-0 mb-5">Unsere Partner</h3>
-                <div class="row">
-                    <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_dan.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_miele.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_anrei.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_schoesswender.jpg" alt="..." />
-                    </div> 
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="page-section" id="livingroom">
-        <div class="container">
-            <h2 class="text-center">Individuelle Möbel</h2>
-            <hr class="divider my-4">
-            <div class="row pb-5 pt-5">
-                <div class="container-fluid p-0 col-lg-5 col-md-12 ">
-                    <div class="row">
-                        <div class="col-lg-6  col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                        <div class="col-lg-6 col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                        <div class="col-lg-6  col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                        <div class="col-lg-6 col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-5 col-md-12 text-center pb-5 offset-lg-2">
-                    Gesamtkonzepte in detaillierter Abstimmung der einzelnen Räume. Wohnen und Arbeiten im privaten Bereich; 
-                    öffentliche Projekte wie Schulen, Kindergärten; Objekteinrichtungen; Studios; Verkaufsräume; 
-                    Küchen und Essbereiche, Wohnzimmer, Schlafzimmer, Badezimmer, Jugend- und Kinderzimmer, Innengestaltung von Wintergärten,
-                    Vorräume, Arbeitszimmer, Stauräume, Objekteinrichtungen, Innentüren, Stilgetreue Umsetzungen; moderne Trends und aktuelle Designs;
-                    edler Landhausstil, Kombination von Materialien wie Stein, Metall, Stoffen mit edlen Hölzern; effektive Lichtgestaltungen;
-                    Handel mit sämtlichen zusätzlich benötigten Ressourcen; Einbaugeräte; Sitzmöbel; Sessel; Stoffe; Vorhänge; Accessoires;
-          </div>
-    </section>
-    <section class="page-section bg-primary text-white" id="stairs">
-        <div class="container">
-            <h2 class="text-center mt-0">Türen - Böden- Stiegen</h2>
-            <hr class="divider light my-4 mb-5">
-            <div class="row pb-5 pt-5">
-                <div class="col-lg-5 col-md-12 text-center pb-5">                    
-                    Damit Ihr persönlicher Wohntraum zu einem stimmigen Gesamtkonzept wird, unterstützen wir Sie auch 
-                    gerne bei der optimalen Farbauswahl und liefern Inspirationen zur passenden Boden- und Wandgestaltung. 
-                    Mit einem maßgeschneiderten Beleuchtungskonzept komplettieren wir Ihren Wohntraum.
-                </div>
-                <div class="container-fluid p-0 col-lg-5 col-md-12 offset-lg-2">
-                    <div class="row">
-                        <div class="col-lg-6  col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                        <div class="col-lg-6 col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                        <div class="col-lg-6  col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                        <div class="col-lg-6 col-sm-6 p-0">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container justify-content-center">
-                <h3 class="text-center mt-0 mb-5">Unsere Partner</h3>
-                <div class="row">
-                    <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_wtg.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_kunex.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_dana.jpg" alt="..." />
-                    </div>
-                    <div class="col-md-3">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/logo_haidl.jpg" alt="..." />
-                    </div> 
-                </div>
-            </div>
-        </div>
-    </section>
     <section class="page-section">
         <div class="container text-center">
             <i class="fas fa-5x fa-question mb-5 text-muted"></i>
-            <h2 class="mb-4">Haben Sie eine Idee? <br/>Wir unterstützen Sie bei der Verwirklichung!</h2>
+            <h2 class="mb-4">Haben Sie eine Idee? <br />Wir unterstützen Sie bei der Verwirklichung!</h2>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#contact">Kontaktieren Sie uns!</a>
         </div>
     </section>
@@ -302,7 +169,6 @@
 
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
-                        <img src="assets/img/team/person1.jpg" alt="Michael Kritzl">
                         <h3 class="h4 mb-2 mt-2">Michael Kritzl</h3>
                         <p class="text-white-50 mb-2">Verkauf/Produktion</p>
                         <p class="text-white-50 mb-1">
@@ -318,7 +184,6 @@
 
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
-                        <img src="assets/img/team/person2.jpg" alt="Friedrich Gassner">
                         <h3 class="h4 mb-2 mt-2">Friedrich Gassner</h3>
                         <p class="text-white-50 mb-2">Verkauf/Produktion</p>
                         <p class="text-white-50 mb-1">
@@ -328,24 +193,13 @@
                         <p class="text-white-50">
                             <i class="fas fa-envelope"></i>
                             <a href="mailto:friedrich.gassner@kriga.at">friedrich.gassner@kriga.at</a>
-                        </p>             
-        </div>
-    </section>
-    <section class="page-section bg-info text-white" id="team">
-        <div class="container">
-            <div class="row justify-content-center">
-
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="member-box">
-                        <img src="assets/img/team/person2.jpg" alt="Eva Gamperl">
-                        <h3 class="h4 mb-2 mt-2">Eva Gamperl</h3>
-                        <p class="text-white-50 mb-2">Buchhaltung</p>
+                        </p>
                     </div>
                 </div>
-                
+
+               
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
-                        <img src="assets/img/team/person3.jpg" alt="Michael Plank">
                         <h3 class="h4 mb-2 mt-2">Michael Plank</h3>
                         <p class="text-white-50 mb-2">CAD Konstruktion und Planung</p>
                         <p class="text-white-50">
@@ -357,7 +211,6 @@
 
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="member-box">
-                        <img src="assets/img/team/person5.jpg" alt="Lukas Hausleithner">
                         <h3 class="h4 mb-2 mt-2">Lukas Hausleithner</h3>
                         <p class="text-white-50 mb-2">Montage und Produktion</p>
                     </div>
@@ -366,7 +219,7 @@
             </div>
         </div>
     </section>
-
+   
 
     <!-- Contact-->
     <section class="page-section" id="contact">
@@ -375,8 +228,10 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="mt-0">Kontaktieren Sie uns!</h2>
                     <hr class="divider my-4" />
-                    <p class="text-muted mb-5">Der Firmenstandort ist Waldhausen. Da jedoch kurz nach der Gründung in Blindenmarkt passende Räumlichkeiten
-                        für die Fertigung gefunden und angemietet wurden, ist der Betrieb nun an zwei Standorten, Bürobetrieb in Waldhausen und Produktion
+                    <p class="text-muted mb-5">Der Firmenstandort ist Waldhausen. Da jedoch kurz nach der Gründung in
+                        Blindenmarkt passende Räumlichkeiten
+                        für die Fertigung gefunden und angemietet wurden, ist der Betrieb nun an zwei Standorten,
+                        Bürobetrieb in Waldhausen und Produktion
                         in Blindenmarkt, angesiedelt.</p>
                 </div>
             </div>
@@ -466,7 +321,7 @@
     <script src="https://unpkg.com/leaflet-gesture-handling@1.2.1/dist/leaflet-gesture-handling.min.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    </section>                           
+    </section>
 </body>
 
 </html>
