--- a/index.html
+++ b/index.html
@@ -128,24 +128,24 @@
         <div class="container-fluid p-0">
             <div class="row no-gutters">
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box js-scroll-trigger" href="#">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/Küche.jpg" alt="..." />
+                    <a class="portfolio-box" href="./assets/img/portfolio/fullsize/kitchen.jpg">
+                        <img class="img-fluid" src="./assets/img/portfolio/fullsize/kitchen.jpg" alt="Küchen" />
                         <div class="portfolio-box-caption">
                             <div class="project-name">Küchen</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box js-scroll-trigger" href="#">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/Individuelle_Möbel.jpg" alt="..." />
+                    <a class="portfolio-box" href="./assets/img/portfolio/fullsize/individual.jpg">
+                        <img class="img-fluid" src="./assets/img/portfolio/fullsize/individual.jpg" alt="individuelle Möbel" />
                         <div class="portfolio-box-caption">
                             <div class="project-name">Individuelle Möbel</div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box js-scroll-trigger" href="#">
-                        <img class="img-fluid" src="assets/img/portfolio/fullsize/Stiege.jpg" alt="..." />
+                    <a class="portfolio-box" href="./assets/img/portfolio/fullsize/stair.jpg">
+                        <img class="img-fluid" src="./assets/img/portfolio/fullsize/stair.jpg" alt="Stiegen" />
                         <div class="portfolio-box-caption">
                             <div class="project-name">Türen - Böden- Stiegen</div>
                         </div>
