--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <br> Mobil Friedrich Gassner: +43 (0) 680 1413888
                 <br> E-Mail: office@kriga.at
                 <br><br> Firmenbuchnummer: 374219y
-                <br> Firmengericht: Landesgericht Linzblima
+                <br> Firmengericht: Landesgericht Linz
                 <br> Behörde gem. ECG (E-Commerce Gesetz): Bezirkshauptmannschaft Perg/Melk
                 <br> Umsatzsteuer-Identifikationsnummer: ATU66943338
                 <br /><br>
