--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
         type="text/css">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/lightbox.css" rel="stylesheet">
+    <script src="js/lightbox.js"></script>
 </head>
-
+    
 <body id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
