--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
         </div>
     </section>
     <!-- Services-->
-    <a href="images/bild-2.jpg" data-lightbox="show-1" data-title="morgens"><img src="images/bild-2-vorschau.jpg" alt="alternative Erklärung"></a>
-    <a href="images/bild-3.jpg" data-lightbox="show-1" data-title="mittags"><img src="images/bild-3-vorschau.jpg" alt="alternative Erklärung"></a>
-    <a href="images/bild-4.jpg" data-lightbox="show-1" data-title="abends "><img src="images/bild-4-vorschau.jpg" alt="alternative Erklärung"></a>
+    <a href="./assets/img/portfolio/fullsize/kitchen.jpg" data-lightbox="show-1" data-title="morgens"><img src="images/bild-2-vorschau.jpg" alt="alternative Erklärung"></a>
+    <a href="./assets/img/portfolio/fullsize/kitchen.jpg" data-lightbox="show-1" data-title="mittags"><img src="images/bild-3-vorschau.jpg" alt="alternative Erklärung"></a>
+    <a href="./assets/img/portfolio/fullsize/kitchen.jpg" data-lightbox="show-1" data-title="abends "><img src="images/bild-4-vorschau.jpg" alt="alternative Erklärung"></a>
     <section class="page-section" id="services">
         <div class="container">
             <h2 class="text-center mt-0">Unser Angebot</h2>
