--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
     <a href="./assets/img/portfolio/fullsize/kitchen.jpg" data-lightbox="show-1" data-title="morgens"><img src="./assets/img/portfolio/fullsize/kitchen.jpg" alt="alternative Erklärung"></a>
     <a href="./assets/img/portfolio/fullsize/kitchen.jpg" data-lightbox="show-1" data-title="mittags"><img src="./assets/img/portfolio/fullsize/kitchen.jpg" alt="buhu"></a>
     <a href="./assets/img/portfolio/fullsize/kitchen.jpg" data-lightbox="show-1" data-title="abends "><img src="./assets/img/portfolio/fullsize/kitchen.jpg" alt="alternative Erklärung"></a>
+    <a href="./assets/img/portfolio/fullsize/kitchen.jpg" data-lightbox="bild-1" data-title="Bildunterschrift">
+        <img src="images/bild-1-vorschau.jpg" alt="ppp Erklärung">
+    </a>
+    <a href="./assets/img/portfolio/fullsize/kitchen.jpg" data-lightbox="bild-1" data-title="Bildunterschrift">
+        <img src="images/bild-1-vorschau.jpg" alt="alternative Erklärung">
+    </a>
     <section class="page-section" id="services">
         <div class="container">
             <h2 class="text-center mt-0">Unser Angebot</h2>
