--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         type="text/css">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery.sliderPro.min.js"></script>
 </head>
     
 <body id="page-top">
