--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
         type="text/css">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
-    <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="js/jquery.sliderPro.min.js"></script>
-    <script type="text/javascript">
+	
+<title>Slider Pro</title>
+<link rel="stylesheet" type="text/css" href="css/slider-pro.min.css" media="screen"/>
+<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="js/jquery.sliderPro.min.js"></script>
+<script type="text/javascript">
 	$( document ).ready(function( $ ) {
 		$( '#example3' ).sliderPro({
 			width: 960,
