--- a/index.html
+++ b/index.html
@@ -353,11 +353,11 @@
 		<div class="sp-slides">
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="http://bqworks.net/slider-pro/images/image1_medium.jpg"
-					data-small="http://bqworks.net/slider-pro/images/image1_small.jpg"
-					data-medium="http://bqworks.net/slider-pro/images/image1_medium.jpg"
-					data-large="http://bqworks.net/slider-pro/images/image1_large.jpg"
-					data-retina="http://bqworks.net/slider-pro/images/image1_large.jpg"/>
+					data-src="./assets/img/portfolio/fullsize/kitchen.jpg"
+					data-small="./assets/img/portfolio/fullsize/kitchen.jpg"
+					data-medium="./assets/img/portfolio/fullsize/kitchen.jpg"
+					data-large="./assets/img/portfolio/fullsize/kitchen.jpg"
+					data-retina="./assets/img/portfolio/fullsize/kitchen.jpg"/>
 
 				<p class="sp-layer sp-white sp-padding"
 					data-horizontal="50" data-vertical="50"
@@ -401,7 +401,7 @@
 				<p class="sp-layer sp-black sp-padding" 
 					data-horizontal="40" data-vertical="160" data-width="350" 
 					data-show-transition="left" data-show-delay="400">
-					sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					seeeeeeeeeeeeeeeed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 				</p>
 			</div>
 
