--- a/index.html
+++ b/index.html
@@ -362,13 +362,13 @@
 				<p class="sp-layer sp-white sp-padding"
 					data-horizontal="50" data-vertical="50"
 					data-show-transition="left" data-show-delay="400">
-					Lorem ipsum
+					Looooooooorem ipsum
 				</p>
 
 				<p class="sp-layer sp-black sp-padding"
 					data-horizontal="180" data-vertical="50"
 					data-show-transition="left" data-show-delay="600">
-					dolor sit amet
+					doloooooooooor sit amet
 				</p>
 
 				<p class="sp-layer sp-white sp-padding"
