--- a/index.html
+++ b/index.html
@@ -349,26 +349,26 @@
 	
 	
 	
-<div id="example3" class="slider-pro">
+	<div id="example3" class="slider-pro">
 		<div class="sp-slides">
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/kitchen.jpg"
-					data-small="./assets/img/portfolio/fullsize/kitchen.jpg"
-					data-medium="./assets/img/portfolio/fullsize/kitchen.jpg"
-					data-large="./assets/img/portfolio/fullsize/kitchen.jpg"
-					data-retina="./assets/img/portfolio/fullsize/kitchen.jpg"/>
+					data-src="http://bqworks.net/slider-pro/images/image1_medium.jpg"
+					data-small="http://bqworks.net/slider-pro/images/image1_small.jpg"
+					data-medium="http://bqworks.net/slider-pro/images/image1_medium.jpg"
+					data-large="http://bqworks.net/slider-pro/images/image1_large.jpg"
+					data-retina="http://bqworks.net/slider-pro/images/image1_large.jpg"/>
 
 				<p class="sp-layer sp-white sp-padding"
 					data-horizontal="50" data-vertical="50"
 					data-show-transition="left" data-show-delay="400">
-					Looooooooorem ipsum
+					Lorem ipsum
 				</p>
 
 				<p class="sp-layer sp-black sp-padding"
 					data-horizontal="180" data-vertical="50"
 					data-show-transition="left" data-show-delay="600">
-					doloooooooooor sit amet
+					dolor sit amet
 				</p>
 
 				<p class="sp-layer sp-white sp-padding"
@@ -401,9 +401,129 @@
 				<p class="sp-layer sp-black sp-padding" 
 					data-horizontal="40" data-vertical="160" data-width="350" 
 					data-show-transition="left" data-show-delay="400">
-					seeeeeeeeeeeeeeeed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+					sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 				</p>
 			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="http://bqworks.net/slider-pro/images/image3_medium.jpg" 
+					data-small="http://bqworks.net/slider-pro/images/image3_small.jpg"
+					data-medium="http://bqworks.net/slider-pro/images/image3_medium.jpg"
+					data-large="http://bqworks.net/slider-pro/images/image3_large.jpg"
+					data-retina="http://bqworks.net/slider-pro/images/image3_large.jpg"/>
+
+				<p class="sp-layer sp-white sp-padding" 
+					data-position="centerCenter" data-vertical="-50" 
+					data-show-transition="right" data-show-delay="500" >
+					Lorem ipsum dolor sit amet
+				</p>
+
+				<p class="sp-layer sp-black sp-padding" 
+					data-position="centerCenter" data-vertical="50" 
+					data-show-transition="left" data-show-delay="700">
+					consectetur adipisicing elit
+				</p>
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="http://bqworks.net/slider-pro/images/image4_medium.jpg" 
+					data-small="http://bqworks.net/slider-pro/images/image4_small.jpg"
+					data-medium="http://bqworks.net/slider-pro/images/image4_medium.jpg"
+					data-large="http://bqworks.net/slider-pro/images/image4_large.jpg"
+					data-retina="http://bqworks.net/slider-pro/images/image4_large.jpg"/>
+
+				<p class="sp-layer sp-black sp-padding"
+					data-position="bottomLeft" data-vertical="0" data-width="100%"
+					data-show-transition="up">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="http://bqworks.net/slider-pro/images/image5_medium.jpg" 
+					data-small="http://bqworks.net/slider-pro/images/image5_small.jpg"
+					data-medium="http://bqworks.net/slider-pro/images/image5_medium.jpg"
+					data-large="http://bqworks.net/slider-pro/images/image5_large.jpg"
+					data-retina="http://bqworks.net/slider-pro/images/image5_large.jpg"/>
+
+				<p class="sp-layer sp-white sp-padding" 
+					data-vertical="5%" data-horizontal="5%" data-width="90%" 
+					data-show-transition="down" data-show-delay="400">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="http://bqworks.net/slider-pro/images/image6_medium.jpg" 
+					data-small="http://bqworks.net/slider-pro/images/image6_small.jpg"
+					data-medium="http://bqworks.net/slider-pro/images/image6_medium.jpg"
+					data-large="http://bqworks.net/slider-pro/images/image6_large.jpg"
+					data-retina="http://bqworks.net/slider-pro/images/image6_large.jpg"/>
+
+				<p class="sp-layer sp-white sp-padding" 
+					data-horizontal="10" data-vertical="10" data-width="300">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="http://bqworks.net/slider-pro/images/image7_medium.jpg" 
+					data-small="http://bqworks.net/slider-pro/images/image7_small.jpg"
+					data-medium="http://bqworks.net/slider-pro/images/image7_medium.jpg"
+					data-large="http://bqworks.net/slider-pro/images/image7_large.jpg"
+					data-retina="http://bqworks.net/slider-pro/images/image7_large.jpg"/>
+
+				<p class="sp-layer sp-black sp-padding" 
+					data-position="bottomLeft" data-horizontal="5%" data-vertical="5%" data-width="90%" 
+					data-show-transition="up" data-show-delay="400">
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+				</p>
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="http://bqworks.net/slider-pro/images/image8_medium.jpg" 
+					data-small="http://bqworks.net/slider-pro/images/image8_small.jpg"
+					data-medium="http://bqworks.net/slider-pro/images/image8_medium.jpg"
+					data-large="http://bqworks.net/slider-pro/images/image8_large.jpg"
+					data-retina="http://bqworks.net/slider-pro/images/image8_large.jpg"/>
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="http://bqworks.net/slider-pro/images/image9_medium.jpg" 
+					data-small="http://bqworks.net/slider-pro/images/image9_small.jpg"
+					data-medium="http://bqworks.net/slider-pro/images/image9_medium.jpg"
+					data-large="http://bqworks.net/slider-pro/images/image9_large.jpg"
+					data-retina="http://bqworks.net/slider-pro/images/image9_large.jpg"/>
+
+				<p class="sp-layer sp-black sp-padding" 
+					data-horizontal="50" data-vertical="50"
+					data-show-transition="down" data-show-delay="500">
+					Lorem ipsum dolor sit amet
+				</p>
+
+				<p class="sp-layer sp-white sp-padding" 
+					data-horizontal="50" data-vertical="100"
+					data-show-transition="up" data-show-delay="500">
+					consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+				</p>
+			</div>
+
+			<div class="sp-slide">
+				<img class="sp-image" src="../src/css/images/blank.gif" 
+					data-src="http://bqworks.net/slider-pro/images/image10_medium.jpg" 
+					data-small="http://bqworks.net/slider-pro/images/image10_small.jpg"
+					data-medium="http://bqworks.net/slider-pro/images/image10_medium.jpg"
+					data-large="http://bqworks.net/slider-pro/images/image10_large.jpg"
+					data-retina="http://bqworks.net/slider-pro/images/image10_large.jpg"/>
+			</div>
+		</div>
 
 		<div class="sp-thumbnails">
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image1_thumbnail.jpg"/>
@@ -417,10 +537,8 @@
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image9_thumbnail.jpg"/>
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image10_thumbnail.jpg"/>
 		</div>
-    </div>	
-	
-	
-	
+    </div>
+
 </body>
 
 </html>
