--- a/index.html
+++ b/index.html
@@ -353,38 +353,38 @@
 		<div class="sp-slides">
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="http://bqworks.net/slider-pro/images/image1_medium.jpg"
-					data-small="http://bqworks.net/slider-pro/images/image1_small.jpg"
-					data-medium="http://bqworks.net/slider-pro/images/image1_medium.jpg"
-					data-large="http://bqworks.net/slider-pro/images/image1_large.jpg"
-					data-retina="http://bqworks.net/slider-pro/images/image1_large.jpg"/>
+					data-src="./assets/img/portfolio/fullsize/Zirbenbett_1.jpg"
+					data-small="./assets/img/portfolio/fullsize/Zirbenbett_1.jpg"
+					data-medium="./assets/img/portfolio/fullsize/Zirbenbett_1.jpg"
+					data-large="./assets/img/portfolio/fullsize/Zirbenbett_1.jpg"
+					data-retina="./assets/img/portfolio/fullsize/Zirbenbett_1.jpg"/>
 
 				<p class="sp-layer sp-white sp-padding"
 					data-horizontal="50" data-vertical="50"
 					data-show-transition="left" data-show-delay="400">
-					Lorem ipsum
+					Zirbenbett
 				</p>
 
 				<p class="sp-layer sp-black sp-padding"
 					data-horizontal="180" data-vertical="50"
 					data-show-transition="left" data-show-delay="600">
-					dolor sit amet
+					Eigenfertigung
 				</p>
 
 				<p class="sp-layer sp-white sp-padding"
 					data-horizontal="315" data-vertical="50"
 					data-show-transition="left" data-show-delay="800">
-					consectetur adipisicing elit.
+					Kriga
 				</p>
 			</div>
 
 	        <div class="sp-slide">
 	        	<img class="sp-image" src="../src/css/images/blank.gif" 
-	        		data-src="http://bqworks.net/slider-pro/images/image2_medium.jpg" 
-					data-small="http://bqworks.net/slider-pro/images/image2_small.jpg"
-					data-medium="http://bqworks.net/slider-pro/images/image2_medium.jpg"
-					data-large="http://bqworks.net/slider-pro/images/image2_large.jpg"
-	        		data-retina="http://bqworks.net/slider-pro/images/image2_large.jpg"/>
+	        			data-src="./assets/img/portfolio/fullsize/Zirbenbett_2" 
+					data-small="./assets/img/portfolio/fullsize/Zirbenbett_2"
+					data-medium="./assets/img/portfolio/fullsize/Zirbenbett_2"
+					data-large="./assets/img/portfolio/fullsize/Zirbenbett_2"
+	        			data-retina="./assets/img/portfolio/fullsize/Zirbenbett_2"/>
 
 				<h3 class="sp-layer sp-black sp-padding" 
 					data-horizontal="40" data-vertical="40" 
@@ -407,11 +407,11 @@
 
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="http://bqworks.net/slider-pro/images/image3_medium.jpg" 
-					data-small="http://bqworks.net/slider-pro/images/image3_small.jpg"
-					data-medium="http://bqworks.net/slider-pro/images/image3_medium.jpg"
-					data-large="http://bqworks.net/slider-pro/images/image3_large.jpg"
-					data-retina="http://bqworks.net/slider-pro/images/image3_large.jpg"/>
+					data-src="./assets/img/portfolio/fullsize/Zirbenbett_3" 
+					data-small="./assets/img/portfolio/fullsize/Zirbenbett_3"
+					data-medium="./assets/img/portfolio/fullsize/Zirbenbett_3"
+					data-large="./assets/img/portfolio/fullsize/Zirbenbett_3"
+					data-retina="./assets/img/portfolio/fullsize/Zirbenbett_3"/>
 
 				<p class="sp-layer sp-white sp-padding" 
 					data-position="centerCenter" data-vertical="-50" 
@@ -526,9 +526,9 @@
 		</div>
 
 		<div class="sp-thumbnails">
-			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image1_thumbnail.jpg"/>
-			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image2_thumbnail.jpg"/>
-			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image3_thumbnail.jpg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Zirbenbett_1"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Zirbenbett_2"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Zirbenbett_3"/>
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image4_thumbnail.jpg"/>
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image5_thumbnail.jpg"/>
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image6_thumbnail.jpg"/>
