--- a/index.html
+++ b/index.html
@@ -353,11 +353,11 @@
 		<div class="sp-slides">
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/Zirbenbett_1.jpg"
-					data-small="./assets/img/portfolio/fullsize/Zirbenbett_1.jpg"
-					data-medium="./assets/img/portfolio/fullsize/Zirbenbett_1.jpg"
-					data-large="./assets/img/portfolio/fullsize/Zirbenbett_1.jpg"
-					data-retina="./assets/img/portfolio/fullsize/Zirbenbett_1.jpg"/>
+					data-src="./assets/img/portfolio/fullsize/Zirbenbett_1.jpeg"
+					data-small="./assets/img/portfolio/fullsize/Zirbenbett_1.jpeg"
+					data-medium="./assets/img/portfolio/fullsize/Zirbenbett_1.jpeg"
+					data-large="./assets/img/portfolio/fullsize/Zirbenbett_1.jpeg"
+					data-retina="./assets/img/portfolio/fullsize/Zirbenbett_1.jpeg"/>
 
 				<p class="sp-layer sp-white sp-padding"
 					data-horizontal="50" data-vertical="50"
@@ -380,11 +380,11 @@
 
 	        <div class="sp-slide">
 	        	<img class="sp-image" src="../src/css/images/blank.gif" 
-	        			data-src="./assets/img/portfolio/fullsize/Zirbenbett_2" 
-					data-small="./assets/img/portfolio/fullsize/Zirbenbett_2"
-					data-medium="./assets/img/portfolio/fullsize/Zirbenbett_2"
-					data-large="./assets/img/portfolio/fullsize/Zirbenbett_2"
-	        			data-retina="./assets/img/portfolio/fullsize/Zirbenbett_2"/>
+	        			data-src="./assets/img/portfolio/fullsize/Zirbenbett_2.jpeg" 
+					data-small="./assets/img/portfolio/fullsize/Zirbenbett_2.jpeg"
+					data-medium="./assets/img/portfolio/fullsize/Zirbenbett_2.jpeg"
+					data-large="./assets/img/portfolio/fullsize/Zirbenbett_2.jpeg"
+	        			data-retina="./assets/img/portfolio/fullsize/Zirbenbett_2.jpeg"/>
 
 				<h3 class="sp-layer sp-black sp-padding" 
 					data-horizontal="40" data-vertical="40" 
@@ -407,11 +407,11 @@
 
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/Zirbenbett_3" 
-					data-small="./assets/img/portfolio/fullsize/Zirbenbett_3"
-					data-medium="./assets/img/portfolio/fullsize/Zirbenbett_3"
-					data-large="./assets/img/portfolio/fullsize/Zirbenbett_3"
-					data-retina="./assets/img/portfolio/fullsize/Zirbenbett_3"/>
+					data-src="./assets/img/portfolio/fullsize/Zirbenbett_3.jpeg" 
+					data-small="./assets/img/portfolio/fullsize/Zirbenbett_3.jpeg"
+					data-medium="./assets/img/portfolio/fullsize/Zirbenbett_3.jpeg"
+					data-large="./assets/img/portfolio/fullsize/Zirbenbett_3.jpeg"
+					data-retina="./assets/img/portfolio/fullsize/Zirbenbett_3.jpeg"/>
 
 				<p class="sp-layer sp-white sp-padding" 
 					data-position="centerCenter" data-vertical="-50" 
@@ -526,9 +526,9 @@
 		</div>
 
 		<div class="sp-thumbnails">
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Zirbenbett_1"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Zirbenbett_2"/>
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Zirbenbett_3"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Zirbenbett_1.jpeg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Zirbenbett_2.jpeg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Zirbenbett_3.jpeg"/>
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image4_thumbnail.jpg"/>
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image5_thumbnail.jpg"/>
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image6_thumbnail.jpg"/>
