--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 				<p class="sp-layer sp-white sp-padding"
 					data-horizontal="50" data-vertical="50"
 					data-show-transition="left" data-show-delay="400">
-					Zirbenbett
+					Zzzzzzzzzirbenbett
 				</p>
 
 				<p class="sp-layer sp-black sp-padding"
