--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 	
 	
 	
-	
+    <section class="page-section p-0" id="map-section">	
 	<div id="example3" class="slider-pro">
 		<div class="sp-slides">
 			<div class="sp-slide">
@@ -538,9 +538,9 @@
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image10_thumbnail.jpg"/>
 		</div>
     </div>
-
+</section>  
 	
-
+<section class="page-section p-0" id="map-section">	
 	<div id="example3" class="slider-pro">
 		<div class="sp-slides">
 			<div class="sp-slide">
@@ -730,7 +730,7 @@
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image10_thumbnail.jpg"/>
 		</div>
     </div>
-	
+</section>  	
 	
 </body>
 
