--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
 		});
 	});
 </script>
+<script type="text/javascript">
+	$( document ).ready(function( $ ) {
+		$( '#example2' ).sliderPro({
+			width: 960,
+			height: 500,
+			fade: true,
+			arrows: true,
+			buttons: false,
+			fullScreen: true,
+			shuffle: true,
+			smallSize: 500,
+			mediumSize: 1000,
+			largeSize: 3000,
+			thumbnailArrows: true,
+			autoplay: false
+		});
+	});
+</script>
 </head>
     
 <body id="page-top">
@@ -506,8 +524,8 @@
     <script src="js/scripts.js"></script>
     </section>  
 	
-    <!-- Portfolio-->
-	<div id="example3" class="slider-pro">
+<!-- Portfolio-->
+	<div id="example2" class="slider-pro">
 		<div class="sp-slides">
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
@@ -696,6 +714,7 @@
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image10_thumbnail.jpg"/>
 		</div>
     </div>	
+	
 
 </body>
 
