--- a/index.html
+++ b/index.html
@@ -164,6 +164,11 @@
             </div>
         </div>
     </section>
+	<section class="page-section" id="services">
+        <div class="container">
+            <h2 class="text-center mt-0">Unser Angebot</h2>
+            <hr class="divider my-4" />
+	</section>
     <!-- Portfolio-->
 	<div id="example3" class="slider-pro">
 		<div class="sp-slides">
