--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
     </section>
 	<section class="page-section" id="services">
         <div class="container">
-            <h2 class="text-center mt-0">Unser Angebot</h2>
+            <h2 class="text-center mt-0">Küchen</h2>
             <hr class="divider my-4" />
 	</section>
     <!-- Portfolio-->
@@ -359,6 +359,11 @@
 			<img class="sp-thumbnail" src="http://bqworks.net/slider-pro/images/image10_thumbnail.jpg"/>
 		</div>
     </div>	
+	<section class="page-section" id="services">
+        <div class="container">
+            <h2 class="text-center mt-0">Schlafzimmer</h2>
+            <hr class="divider my-4" />
+	</section>
 <!-- Portfolio-->
 	<div id="example2" class="slider-pro">
 		<div class="sp-slides">
