--- a/index.html
+++ b/index.html
@@ -71,6 +71,24 @@
 		});
 	});
 </script>
+<script type="text/javascript">
+	$( document ).ready(function( $ ) {
+		$( '#example1' ).sliderPro({
+			width: 960,
+			height: 500,
+			fade: true,
+			arrows: true,
+			buttons: false,
+			fullScreen: true,
+			shuffle: true,
+			smallSize: 500,
+			mediumSize: 1000,
+			largeSize: 3000,
+			thumbnailArrows: true,
+			autoplay: false
+		});
+	});
+</script>
 </head>
     
 <body id="page-top">
@@ -560,7 +578,7 @@
             <hr class="divider my-4" />
 	</section>
 <!-- Portfolio-->
-	<div id="example2" class="slider-pro">
+	<div id="example1" class="slider-pro">
 		<div class="sp-slides">
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
