--- a/index.html
+++ b/index.html
@@ -192,11 +192,11 @@
 		<div class="sp-slides">
 			<div class="sp-slide">
 				<img class="sp-image" src="../src/css/images/blank.gif" 
-					data-src="./assets/img/portfolio/fullsize/Küche_1.jpg"
-					data-small="./assets/img/portfolio/fullsize/Küche_1.jpg"
-					data-medium="./assets/img/portfolio/fullsize/Küche_1.jpg"
-					data-large="./assets/img/portfolio/fullsize/Küche_1.jpg"
-					data-retina="./assets/img/portfolio/fullsize/Küche_1.jpg"/>
+					data-src="./assets/img/portfolio/fullsize/Küche_1.JPG"
+					data-small="./assets/img/portfolio/fullsize/Küche_1.JPG"
+					data-medium="./assets/img/portfolio/fullsize/Küche_1.JPG"
+					data-large="./assets/img/portfolio/fullsize/Küche_1.JPG"
+					data-retina="./assets/img/portfolio/fullsize/Küche_1.JPG"/>
 
 				<p class="sp-layer sp-white sp-padding"
 					data-horizontal="50" data-vertical="50"
@@ -365,7 +365,7 @@
 		</div>
 
 		<div class="sp-thumbnails">
-			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Küche_1.jpg"/>
+			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Küche_1.JPG"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Küche_2.jpg"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Küche_3.jpg"/>
 			<img class="sp-thumbnail" src="./assets/img/portfolio/fullsize/Küche_4.jpg"/>
